# harnessOS

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  TASKS.md  debug_tui_flow.py  main.py  pyproject.toml  requirements.txt  test_agent.py  test_full_agent.py  test_tui_startup.py
cli/: README.md  __init__.py  main.py  renderer.py  session.py
core/: __init__.py
mcp/: __init__.py  types.py
openharness/: __init__.py
scripts/: check_real_mcp_env.py  e2e_data_service_mcp_validation.py  e2e_funasr_mcp_validation.py  e2e_knowledge_validation.py  e2e_knowledge_validation.sh  e2e_meeting_preflight.sh  e2e_meeting_to_knowledge_mcp_validation.py  e2e_meeting_validation.sh  pv22_external_app_contract_acceptance.py  stitch_mcp_proxy_preload.cjs  v4_2_controlled_runtime_evidence.py  v4_2_headless_evidence.py  v4_3_serial_video_evidence.py  v4_4_parallel_deliberation_evidence.py  v4_5_engineering_workflow_evidence.py  v4_6_agent_builder_evidence.py  v4_u5e_real_llm_local_document_workflow.py  v4_u7_engineering_workflow_runtime.py  v4_u7_parallel_multi_agent_runtime.py  v4_u7_serial_multi_agent_runtime.py  v4_u8_manual_acceptance_proxy.py  v4_u9_final_acceptance.py  v4_unified_reality_check_audit.py  v5_4c_existing_v4_runtime_trial_evidence.py  v5_6_thin_web_console_evidence.py  v5_7a_design_gate_evidence.py  v5_8a_planning_gate_evidence.py  v5_8b_distributed_coordination_evidence.py  v5_8c_lineage_recovery_evidence.py  v5_8d_policy_observability_evidence.py  v5_8e_final_acceptance.py  v6_1_identity_tenant_evidence.py  v6_2_credential_provider_evidence.py  (+11 more)
(+3144 files in other folders)
