[project]
name = "harness-os"
version = "0.1.0"
description = "harnessOS - Multi-functional AI framework based on Deep Agents/LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "deepagents>=0.1.0",
    "dashscope>=1.20.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "httpx>=0.28.0",
    "websockets>=12.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "orjson>=3.10.0",
    "croniter>=2.0.0",
    "pyperclip>=1.9.0",
    "pyyaml>=6.0",
    "questionary>=2.0.1",
    "watchfiles>=0.20.0",
    "slack-sdk>=3.0.0",
    "python-telegram-bot>=21.0.0",
    "discord.py>=2.0.0",
    "lark-oapi>=1.5.0",
]

[project.scripts]
harness = "cli.main:main"

[dependency-groups]
dev = ["pytest>=9.0.0", "pytest-asyncio>=1.0.0", "ruff>=0.14.0", "httpx>=0.28.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "smoke_model: real model smoke tests, skipped unless HARNESSOS_RUN_MODEL_SMOKE=1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
